# RL2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Renderer/: ApiBase.cpp  ApiBase.h  CMakeLists.txt  CmdExecutor.cpp  CmdExecutor.h  Core.cpp  Core.h  ICmdRecorder.cpp  ICmdRecorder.h  Swapchain.cpp  Swapchain.h
Renderer/CmdRecorder/: BlitRecorder.cpp  BlitRecorder.h  CMakeLists.txt  CompositRecorder.h  ICmdRecorder.cpp  ICmdRecorder.h  ImgBarrierRecorder.cpp  ImgBarrierRecorder.h  PushConstantRecorder.cpp  PushConstantRecorder.h
Renderer/DataComponent/: BufferData.h  CommandPoolData.h  DataComponents.h  DescriptorPoolData.h  ImageData.h  PipelineData.h
Renderer/Depricated/: CmdExecutor.h  DPoolHandler.cpp  StagingBuffer.h  StructuredBuffer.cpp
Renderer/Depricated/ShaderBindable/: CMakeLists.txt  RenderTarget.cpp  RenderTarget.h  StructuredBuffer.cpp  StructuredBuffer.h
Renderer/Depricated/ShaderHandler/: CMakeLists.txt  Compute.h
Renderer/DescriptorHandler/: CMakeLists.txt  Layout.cpp  Layout.h  Pool.cpp  Pool.h
Renderer/FrameGraph/: CMakeLists.txt  FrameGraph.cpp  FrameGraph.h  LogicalBufferResource.cpp  LogicalBufferResource.h
Renderer/PipelineHandler/: BindingInfo.h  CMakeLists.txt  Compute.cpp  Compute.h  DPoolHandler.cpp  DPoolHandler.h  DPoolLayoutFactory.cpp  DPoolLayoutFactory.h  DSetLayoutFactory.cpp  DSetlLayoutFactory.h  DescriptorBinding.cpp  DescriptorBinding.h  DescriptorHandler.cpp  DescriptorHandler.h  LoadShaderModule.cpp  LoadShaderModule.h
Renderer/ResourceHandler/: BufferBase.cpp  BufferBase.h  CMakeLists.txt  CommandPool.cpp  CommandPool.h  ImageBase.cpp  ImageBase.h  PushConstant.cpp  PushConstant.h  RenderTarget.cpp  RenderTarget.h  StagingBuffer.cpp  StructuredBuffer.cpp  StructuredBuffer.h
Renderer/ShaderBindable/: BindableStructuredBuffer.cpp  BindableStructuredBuffer.h  CMakeLists.txt  IShaderBindable.cpp  IShaderBindable.h  IShaderControlable.cpp  IShaderControlable.h  PushConstant.cpp  PushConstant.h  RenderTarget.cpp  RenderTarget.h  StructuredBuffer.cpp  StructuredBuffer.h
Renderer/ShaderHandler/: CMakeLists.txt  Compute.cpp  Compute.h  ComputeFactory.cpp  ComputeFactory.h  IShaderBindable.cpp  IShaderBindable.h
Renderer/Shaders/: compile.bat  plain_color.hlsl  plain_color.spv
Utill/: CMakeLists.txt  Logger.cpp  Logger.h  UtillFunctions.cpp  UtillFunctions.h
